gcc/testsuite/sarif-replay.dg/malformed-json/object-with-trailing-comma.sarif
{ "foo": "bar", } /* { dg-error "expected string for object key after ','; got '\\\}'" } */

{ dg-begin-multiline-output "" }
    1 | { "foo": "bar", }
      |                 ^
{ dg-end-multiline-output "" }
